--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ terraform.rc
 terragrunt-debug.tfvars.json
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform,terragrunt
+
+
+home-cluster-config
