--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,4 @@ terragrunt-debug.tfvars.json
 # End of https://www.toptal.com/developers/gitignore/api/terraform,terragrunt
 
 
-home-cluster-config
+*-cluster-config
